Bug 754643 - Enable FAIL_ON_WARNINGS in content/media; r=cpearce f=roc